--- a/index.html
+++ b/index.html
@@ -7,8 +7,4 @@ Prueba numero 3
 =======
 Esto es otra prueba
 
->>>>>>> decb8aae982e856b3d47b497ddd661fef998b95c
->>>>>>> 8dd6df9d219dd97ca035a0e152e180d734456934
-
-
-prueba de tatiana 2.0
+prueba de daniel 2.0
