--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<<<<<<< HEAD
-Holaaa, esto es una prueba
-holaa, prueba 2
-=======
-<<<<<<< HEAD
-Prueba numero 3
-=======
-Esto es otra prueba
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mi primera pagina web</title>
+</head>
+<body>
 
---------------
-Esto es otra prueba más
+</body>
+</html>
